--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,4 +82,12 @@
         "xtree": "cpp",
         "xutility": "cpp"
     },
+    "mesonbuild.configureOptions": [
+        "--native-file=${workspaceFolder}\\vcpkg.ini",
+    ],
+    "mesonbuild.configureEnvironment": {
+        "VCPKG_INSTALLED_DIR": "${workspaceFolder}/vcpkg_install",
+        "PKG_CONFIG_PATH": "${workspaceFolder}/vcpkg_installed/x64-windows-static/lib/pkgconfig",
+    },
+    "task.problemMatchers.neverPrompt": false,
 }
