--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 			"type": "meson",
 			"mode": "build",
 			"problemMatcher": [
-				"$meson-gcc"
+				"$msCompile"
 			],
 			"group": {
 				"kind": "build",
@@ -18,7 +18,7 @@
 			"type": "meson",
 			"mode": "build",
 			"problemMatcher": [
-				"$meson-gcc"
+				"$msCompile"
 			],
 			"group": {
 				"kind": "build"
@@ -33,5 +33,20 @@
 				]
 			}
 		},
-	]
+	],
+	"problemMatchers": [
+        {
+            "name": "msvc",
+            "owner": "cpp",
+            "fileLocation": ["relative", "${workspaceFolder}"],
+            "pattern": {
+                "regexp": "^(.*)\\((\\d+)\\)\\s*:\\s*(error|warning)\\s*(C\\d+):\\s*(.*)$",
+                "file": 1,
+                "line": 2,
+                "severity": 3,
+                "code": 4,
+                "message": 5
+            }
+        }
+    ]
 }
