checkpoint that compiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,93 +1,190 @@
 {
-    "makefile.makePath": "make",
-    "makefile.loggingLevel": "Debug",
-    "terminal.integrated.defaultProfile.windows": "CL 64x64 shell",
-    "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild",
-    "C_Cpp.default.compileCommands": "c:\\code\\1work\\cdhit\\builddir/compile_commands.json",
-    "files.associations": {
-        "iostream": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "charconv": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "map": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "format": "cpp",
-        "fstream": "cpp",
-        "initializer_list": "cpp",
-        "iomanip": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "numbers": "cpp",
-        "ostream": "cpp",
-        "span": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "text_encoding": "cpp",
-        "typeinfo": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp",
-        "cstring": "cpp",
-        "ios": "cpp",
-        "list": "cpp",
-        "locale": "cpp",
-        "queue": "cpp",
-        "xfacet": "cpp",
-        "xhash": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp"
-    },
-    "mesonbuild.configureOptions": [
-        "--native-file=${workspaceFolder}\\vcpkg.ini",
-    ],
-    "mesonbuild.configureEnvironment": {
-        "VCPKG_INSTALLED_DIR": "${workspaceFolder}/vcpkg_install",
-        "PKG_CONFIG_PATH": "${workspaceFolder}/vcpkg_installed/x64-windows-static/lib/pkgconfig",
-    },
-    "task.problemMatchers.neverPrompt": false,
+  "C_Cpp.codeAnalysis.runAutomatically": false,
+  "C_Cpp.default.compileCommands": "c:\\code\\1work\\cdhit\\buildvs/compile_commands.json",
+  "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild",
+  "C_Cpp.default.intelliSenseMode": "windows-msvc-x64",
+  "C_Cpp.default.mergeConfigurations": true,
+  "C_Cpp.default.recursiveIncludes.order": "breadthFirst",
+  "C_Cpp.inlayHints.parameterNames.hideLeadingUnderscores": false,
+  "C_Cpp.inlayHints.parameterNames.suppressWhenArgumentContainsName": false,
+  "C_Cpp.loggingLevel": "Debug",
+  "C_Cpp.vcFormat.indent.namespaceContents": false,
+  "C_Cpp.vcFormat.indent.preprocessor": "oneLeft",
+  "C_Cpp.vcFormat.indent.preserveComments": true,
+  "C_Cpp.workspaceParsingPriority": "high",
+  "files.associations": {
+    "*.tcc": "cpp",
+    "algorithm": "cpp",
+    "any": "cpp",
+    "array": "cpp",
+    "atomic": "cpp",
+    "barrier": "cpp",
+    "bit": "cpp",
+    "bitset": "cpp",
+    "cctype": "cpp",
+    "cfenv": "cpp",
+    "charconv": "cpp",
+    "chrono": "cpp",
+    "cinttypes": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "codecvt": "cpp",
+    "compare": "cpp",
+    "complex": "cpp",
+    "concepts": "cpp",
+    "condition_variable": "cpp",
+    "coroutine": "cpp",
+    "csetjmp": "cpp",
+    "csignal": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp",
+    "cuchar": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "exception": "cpp",
+    "execution": "cpp",
+    "expected": "cpp",
+    "filesystem": "cpp",
+    "format": "cpp",
+    "forward_list": "cpp",
+    "fstream": "cpp",
+    "functional": "cpp",
+    "future": "cpp",
+    "generator": "cpp",
+    "initializer_list": "cpp",
+    "iomanip": "cpp",
+    "ios": "cpp",
+    "iosfwd": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "iterator": "cpp",
+    "latch": "cpp",
+    "limits": "cpp",
+    "list": "cpp",
+    "locale": "cpp",
+    "map": "cpp",
+    "mdspan": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "mutex": "cpp",
+    "new": "cpp",
+    "numbers": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "ostream": "cpp",
+    "print": "cpp",
+    "queue": "cpp",
+    "random": "cpp",
+    "ranges": "cpp",
+    "ratio": "cpp",
+    "regex": "cpp",
+    "resumable": "cpp",
+    "scoped_allocator": "cpp",
+    "semaphore": "cpp",
+    "set": "cpp",
+    "shared_mutex": "cpp",
+    "source_location": "cpp",
+    "span": "cpp",
+    "spanstream": "cpp",
+    "sstream": "cpp",
+    "stack": "cpp",
+    "stacktrace": "cpp",
+    "stdexcept": "cpp",
+    "stdfloat": "cpp",
+    "stop_token": "cpp",
+    "streambuf": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "strstream": "cpp",
+    "syncstream": "cpp",
+    "system_error": "cpp",
+    "text_encoding": "cpp",
+    "thread": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "typeindex": "cpp",
+    "typeinfo": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "utility": "cpp",
+    "valarray": "cpp",
+    "variant": "cpp",
+    "vector": "cpp",
+    "xfacet": "cpp",
+    "xhash": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xlocbuf": "cpp",
+    "xlocinfo": "cpp",
+    "xlocmes": "cpp",
+    "xlocmon": "cpp",
+    "xlocnum": "cpp",
+    "xloctime": "cpp",
+    "xmemory": "cpp",
+    "xstring": "cpp",
+    "xtr1common": "cpp",
+    "xtree": "cpp",
+    "xutility": "cpp"
+  },
+  "makefile.loggingLevel": "Debug",
+  "makefile.makePath": "make",
+  "mesonbuild.buildFolder": "buildvs",
+  "mesonbuild.configureEnvironment": {
+    "PKG_CONFIG_PATH": "${workspaceFolder}/vcpkg_installed/x64-windows-static/lib/pkgconfig",
+    "VCPKG_INSTALLED_DIR": "${workspaceFolder}/vcpkg_installed"
+  },
+  "mesonbuild.configureOptions": [
+    "--native-file=${workspaceFolder}\\vcpkg.ini"
+  ],
+  "terminal.integrated.defaultProfile.windows": "CL 64x64 shell",
+  "terminal.integrated.env.windows": {
+    "NINJAFLAGS": "-v",
+    "DevEnvDir": "C:\\bin\\dev\\Microsoft\\VS2022Community\\Common7\\IDE\\",
+    "ExtensionSdkDir": "C:\\Program Files (x86)\\Microsoft SDKs\\Windows Kits\\10\\ExtensionSDKs",
+    "EXTERNAL_INCLUDE": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\include;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\ATLMFC\\include;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Auxiliary\\VS\\include;C:\\Windows Kits\\10\\include\\10.0.26100.0\\ucrt;C:\\Windows Kits\\10\\include\\10.0.26100.0\\um;C:\\Windows Kits\\10\\include\\10.0.26100.0\\shared;C:\\Windows Kits\\10\\include\\10.0.26100.0\\winrt;C:\\Windows Kits\\10\\include\\10.0.26100.0\\cppwinrt",
+    "Framework40Version": "v4.0",
+    "FrameworkDir": "C:\\Windows\\Microsoft.NET\\Framework64\\",
+    "FrameworkDir64": "C:\\Windows\\Microsoft.NET\\Framework64\\",
+    "FrameworkVersion": "v4.0.30319",
+    "FrameworkVersion64": "v4.0.30319",
+    "HTMLHelpDir": "C:\\Program Files (x86)\\HTML Help Workshop",
+    "PATH": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\bin\\HostX64\\x64;C:\\Windows Kits\\10\\bin\\10.0.26100.0\\x64;C:\\Windows Kits\\10\\bin\\10.0.26100.0\\x86;C:\\bin\\dev\\Microsoft\\VS2022Community\\Common7\\tools;C:\\bin\\dev\\Microsoft\\VS2022Community\\Common7\\ide;C:\\Program Files (x86)\\HTML Help Workshop;C:\\bin\\dev\\Microsoft\\VS2022Community\\MSBuild\\Current\\Bin\\amd64;C:\\WINDOWS\\Microsoft.NET\\Framework64\\v4.0.30319\\;C:\\WINDOWS\\Microsoft.NET\\Framework\\v4.0.30319\\;C:\\bin\\dev\\Microsoft\\VS2022Community\\MSBuild\\Current\\Bin;C:\\WINDOWS\\Microsoft.NET\\Framework\\v4.0.30319\\;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\OpenSSH;C:\\Program Files\\PowerShell\\7;C:\\Program Files\\dotnet;C:\\Program Files\\dotnet\\;C:\\Windows Kits\\10\\Windows Performance Toolkit\\;C:\\bin\\tools\\Scoop\\apps\\vscode\\current\\bin;C:\\bin\\tools\\Scoop\\apps\\latex\\current\\texmfs\\install\\miktex\\bin\\x64;C:\\Users\\refac\\go\\bin;C:\\bin\\tools\\Scoop\\apps\\mpv\\current;C:\\bin\\tools\\Scoop\\shims;C:\\tools\\64;C:\\Users\\refac\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\refac\\go\\bin;C:\\code\\tools;C:\\bin\\dev\\git4win\\mingw64\\bin;C:\\bin\\dev\\git4win\\usr\\bin;",
+    "LIB": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\lib\\x64;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\atlmfc\\lib\\x64;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Auxiliary\\VS\\lib\\x64;C:\\Windows Kits\\10\\lib\\10.0.26100.0\\ucrt\\x64;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Auxiliary\\VS\\UnitTest\\lib;C:\\Windows Kits\\10\\lib\\10.0.26100.0\\um\\x64;lib\\um\\x64;",
+    "LIBPATH": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\atlmfc\\lib\\x64;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\lib\\x64;",
+    "INCLUDE": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\include;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\atlmfc\\include;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Auxiliary\\VS\\include;C:\\Windows Kits\\10\\Include\\10.0.26100.0\\ucrt;C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Auxiliary\\VS\\UnitTest\\include;C:\\Windows Kits\\10\\Include\\10.0.26100.0\\um;C:\\Windows Kits\\10\\Include\\10.0.26100.0\\shared;C:\\Windows Kits\\10\\Include\\10.0.26100.0\\winrt;C:\\Windows Kits\\10\\Include\\10.0.26100.0\\cppwinrt;Include\\um;",
+    "IFCPATH": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\ifc\\x64",
+    "is_x64_arch": "true",
+    "PATHEXT": ".COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC",
+    "PSModulePath": "C:\\bin\\tools\\Scoop\\modules;C:\\Users\\refac\\Documents\\WindowsPowerShell\\Modules",
+    "UCRTVersion": "10.0.26100.0",
+    "UniversalCRTSdkDir": "C:\\Windows Kits\\10\\",
+    "VCIDEInstallDir": "C:\\bin\\dev\\Microsoft\\VS2022Community\\Common7\\IDE\\VC\\",
+    "VCINSTALLDIR": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\",
+    "VCPKG_ROOT": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\vcpkg",
+    "VCToolsInstallDir": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Tools\\MSVC\\14.43.34808\\",
+    "VCToolsRedistDir": "C:\\bin\\dev\\Microsoft\\VS2022Community\\VC\\Redist\\MSVC\\14.42.34433\\",
+    "VCToolsVersion": "14.43.34808",
+    "VisualStudioVersion": "17.0",
+    "VSCMD_ARG_app_plat": "Desktop",
+    "VSCMD_ARG_HOST_ARCH": "x64",
+    "VSCMD_ARG_TGT_ARCH": "x64",
+    "VSCMD_VER": "17.13.5",
+    "VSINSTALLDIR": "C:\\bin\\dev\\Microsoft\\VS2022Community\\",
+    "WindowsLibPath": "C:\\Windows Kits\\10\\UnionMetadata\\10.0.26100.0;C:\\Windows Kits\\10\\References\\10.0.26100.0",
+    "WindowsSdkBinPath": "C:\\Windows Kits\\10\\bin\\",
+    "WindowsSdkDir": "C:\\Windows Kits\\10\\",
+    "WindowsSDKLibVersion": "10.0.26100.0\\",
+    "WindowsSdkVerBinPath": "C:\\Windows Kits\\10\\bin\\10.0.26100.0\\",
+    "WindowsSDKVersion": "10.0.26100.0"
+  },
+  "cmake.ignoreCMakeListsMissing": true,
+  "clangd.arguments": [
+    "--experimental-modules-support"
+  ]
 }
