--- a/vcpkg.ini
+++ b/vcpkg.ini
@@ -1,3 +1,4 @@
 [properties]
-cmake_prefix_path = ['./vcpkg_installed/x64-windows']
-pkg_config_path = ['./vcpkg_installed/x64-windows/lib/pkgconfig']
+VCPKG_INSTALLED_DIR = ['C:\code\1work\cdhit\vcpkg_installed']
+cmake_prefix_path = ['C:\code\1work\cdhit\vcpkg_installed\x64-windows']
+pkg_config_libdir = ['C:\code\1work\cdhit\vcpkg_installed\x64-windows-static\lib\pkgconfig']
