--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,52 +1,38 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "meson",
-			"mode": "build",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"target": "src/cd-hit-est:executable",
-			"label": "Meson: cd-hit-est"
-		},
-		{
-			"type": "meson",
-			"mode": "build",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": {
-				"kind": "build"
-			},
-			"label": "Meson: Build all targets",
-			"options": {
-				"args": [
-					"--buildtype",
-					"debug",
-					"-v",
-					"--ninja-args", "-v"
-				]
-			}
-		},
-	],
-	"problemMatchers": [
-        {
-            "name": "msvc",
-            "owner": "cpp",
-            "fileLocation": ["relative", "${workspaceFolder}"],
-            "pattern": {
-                "regexp": "^(.*)\\((\\d+)\\)\\s*:\\s*(error|warning)\\s*(C\\d+):\\s*(.*)$",
-                "file": 1,
-                "line": 2,
-                "severity": 3,
-                "code": 4,
-                "message": 5
-            }
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "type": "meson",
+      "mode": "build",
+      "target": "src/cd-hit-est:executable",
+      "problemMatcher": [
+        "$msCompile"
+      ],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "args": [
+        "-v",
+        // "--vs-args=/logger:C:\\code\\tools\\CompileCommandsJson.dll;compile_commands.json",
+        "--vs-args=/bl:${workspaceFolder}/buildvs/binarylogfilename.binlog",
+      ],
+      "label": "Meson: compile cd-hit-est"
+    },
+  ],
+  "problemMatchers": [
+    {
+      "name": "msvc",
+      "owner": "cpp",
+      "fileLocation": ["relative", "${workspaceFolder}"],
+      "pattern": {
+        "regexp": "^(.*)\\((\\d+)\\)\\s*:\\s*(error|warning)\\s*(C\\d+):\\s*(.*)$",
+        "file": 1,
+        "line": 2,
+        "severity": 3,
+        "code": 4,
+        "message": 5
+      }
+    }
+  ]
 }
