--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
+__pycache__
 /build
 /*.exe
 /*.o
 /.makeartifacts
 /.logs
 /.vs
+/.cache/
+.out/
+
 subprojects/
 vcpkg_installed/
 vcpkg/
 zzz/
-upstream_master/
-/.cache/clangd/index
 test_*/
